--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "license": "MIT",
   "dependencies": {
     "@material/card": "14.0.0",
+    "@material/icon-button": "14.0.0",
     "@material/mwc-button": "0.27.0",
     "@material/mwc-icon": "0.27.0",
     "@material/ripple": "14.0.0",
     "@material/textfield": "14.0.0",
+    "@material/top-app-bar": "14.0.0",
     "@material/typography": "14.0.0",
     "@open-wc/scoped-elements": "2.1.3",
     "lit": "2.4.0",
