fixed relative path for css files and redirects

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack serve",
     "build": "webpack",
     "predeploy": "npm run build",
-    "deploy": "gh-pages --branch main -d dist",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
